fix: integra gerenciamento eventos e dashboard - init
integração da versão inicial da página do organizador com o dashboardo do organizador
