# backend/src/resources/compra/compra.router.ts
@@ -3,18 +3,15 @@ import compraController from "./compra.controller";
 import { validarSchema } from "../../middlewares/validarSchema";
 import { usuarioAutenticado } from "../../middlewares/usuarioAutenticado";
 import { isComprador } from "../../middlewares/isComprador";
+import compraSchemas from "./compra.schemas";
 
 const router = Router();
 
 router.post("/",
-    isComprador,
     usuarioAutenticado,
+    isComprador,
+    validarSchema(compraSchemas.compraSchema),
     compraController.create
-);
-
-// Rota adicionada apenas para fins de verificação das compras na API, não deve permanecer na versão final
-router.get("/",
-    compraController.index
 );
 
 export default router;
