# backend/src/resources/enderecosEventos/enderecosEventos.router.ts
@@ -1,0 +1,14 @@
+import { Router } from "express";
+import { validarSchema } from "../../middlewares/validarSchema";
+import { schemaEnderecosEventos } from "./enderecosEventos.schemas";
+import enderecosEventosController from "./enderecosEventos.controller";
+
+const router = Router();
+
+router.post(
+    "/",
+    validarSchema(schemaEnderecosEventos),
+    enderecosEventosController.readEventoByCidade
+);
+
+export default router;
