# backend/src/router/v1Router.ts
@@ -6,14 +6,14 @@ import organizadorRouter from "../resources/organizador/organizador.router";
 import eventoRouter from "../resources/evento/evento.router";
 import compraRouter from "../resources/compra/compra.router";
 import sessaoRouter from "../resources/sessao/sessao.router";
-import dashboardRouter from "../resources/dashboard/dashbord.router";
-import imagemRouter from '../resources/imagem/imagem.router';
+import dashboardRouter from "../resources/dashboard/dashboard.router";
+import imagemRouter from "../resources/imagem/imagem.router";
 import tipoTicketRouter from "../resources/tipoTicket/tipoTicket.router";
-import tiposTicketsEventosRouter from "../resources/tiposTicketsEventos/tiposTicketsEventos.router"
+import tiposTicketsEventosRouter from "../resources/tiposTicketsEventos/tiposTicketsEventos.router";
 import enderecoRouter from "../resources/endereco/endereco.router";
 import pagamentoRouter from "../resources/pagamento/pagamento.router";
 import pedidoRouter from "../resources/pedido/pedido.router";
-
+import enderecosEventosRouter from "../resources/enderecosEventos/enderecosEventos.router";
 
 const router = Router();
 
@@ -65,29 +65,19 @@ router.use(
   dashboardRouter
 );
 
-router.use(
-  "/tipoTicket",
-  tipoTicketRouter
-);
+router.use("/tipoTicket", tipoTicketRouter);
+
+router.use("/tiposTicketsEventos", tiposTicketsEventosRouter);
+
+router.use("/endereco", enderecoRouter);
+
+router.use("/pagamento", pagamentoRouter);
+
+router.use("/pedido", pedidoRouter);
 
 router.use(
-  "/tiposTicketsEventos",
-  tiposTicketsEventosRouter
-);
-
-router.use(
-  "/endereco",
-  enderecoRouter
-);
-
-router.use(
-  "/pagamento",
-  pagamentoRouter
-);
-
-router.use(
-  "/pedido",
-  pedidoRouter
+  "/enderecosEventos",
+  enderecosEventosRouter
 );
 
 export default router;
